<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_world"
            android:title="@string/nav_world" />
        <item
            android:id="@+id/nav_business"
            android:title="@string/nav_business" />
        <item
            android:id="@+id/nav_science"
            android:title="@string/nav_science" />
        <item
            android:id="@+id/nav_technology"
            android:title="@string/nav_technology" />
        <item
            android:id="@+id/nav_sport"
            android:title="@string/nav_sport" />
        <item
            android:id="@+id/nav_environment"
            android:title="@string/nav_environment" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>